# fastapi-tdd-docker

./: .gitignore  Dockerfile  Dockerfile.prod  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: main.yaml
app/: config.py  db.py  summariser.py
app/api/: crud.py  summaries.py
app/models/: pydantic.py  tortoise.py
tests/: conftest.py  test_ping.py  test_summaries.py  test_summaries_unit.py
