[tool.poetry]
authors = ["Chris Smith-Clarke <chrissmithclarke@gmail.com>"]
description = ""
name = "fastapi-tdd-docker"
packages = [{include = "fastapi_tdd_docker"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
aerich = "0.7.1"
asyncpg = "0.27.0"
fastapi = "0.94.1"
python = "^3.11"
tortoise-orm = "0.19.3"
uvicorn = "0.21.1"
pytest = "^7.2.2"
httpx = "^0.23.3"

[tool.aerich]
location = "./migrations"
src_folder = "./."
tortoise_orm = "app.db.TORTOISE_ORM"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
