[tool.poetry]
authors = ["Chris Smith-Clarke <chrissmithclarke@gmail.com>"]
description = ""
name = "fastapi-tdd-docker"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
aerich = "0.7.1"
asyncpg = "0.27.0"
fastapi = "0.94.1"
gunicorn = "^20.1.0"
httpx = "^0.23.3"
python = "^3.11"
tortoise-orm = "0.19.3"
uvicorn = "0.21.1"
newspaper3k = "^0.2.8"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pytest = "^7.3.0"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.2.1"

[tool.aerich]
location = "./migrations"
src_folder = "./."
tortoise_orm = "app.db.TORTOISE_ORM"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"